build: replace 'thin' agent with 'full_jnlp' * Replace gradlew -> gradle * Add JVM args '--add-opens' to support JDK 17+ in PowerMock
Signed-off-by: Esteban Laver <emlaver@us.ibm.com>